# cdp-generator

./: CMakeLists.txt  generate_protocol.py
templates/: Devtools_cpp.template  Devtools_h.template  Type_cpp.template  Type_h.template
